--- a/public/header.html
+++ b/public/header.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class='nav'>
-    <img src="" alt="logo_BeCentral">
+    <img src="images/becentralLogo_2.png" alt="logo_BeCentral" width="25px" height="30px">
     <ul>
         <li>About</li>
         <li>Co-funders</li>
@@ -18,11 +18,10 @@
     </ul>
 </div>
 <div class='header'>
-    <img src="" alt="BeCentral">
     <div class='ticket'>
         <img src="images/becentralLogo.png" alt="logo_BeCentral">
         <h1>Your ticket to digital. A great place to work in the heart of Brussels</h1>
-        <button type="button" name="button">Keep in touch</button>
+        <button type="button" name="button"> - Keep in touch</button>
     </div>
 </div>
 </body>
