--- a/public/about.html
+++ b/public/about.html
@@ -7,37 +7,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="app.css">
     <title>Be Centrale</title>
+    <link rel="stylesheet" href="../assets/scss/layout/_about.scss">
 </head>
 <body>
-    <section class="about_section">
-        <div class="title">
-            <h3 >01 About</h3>
-        </div>
-        <div class="image">
-            <img class= "left" src="./images/becentral.jpg" alt="photo becentral">
-        </div>
-        <div class="paragraph">
-            <div class="image_left">
-                <h2 class="title_paragraph">Ticket To Digital</h2>
-                <p>BeCentral is a campus hosting 25+ digital initiatives above Brussels Central Station. Co-founded by 28 passionate entrepreneurs and helped by 13 ambassadors, the campus was created to help closing the digital skills gap and accelerate Belgium's digital transformation.</p>
-                <p>Our campus welcome everyday 200+ permanent residents or visitors who are sharing and contribution to our mission.</p>
-                <p>We organize training sessions, workshops, seminars, meetups, hackathons, bootcamps… Any form of exchange involving digital knowledge, expertise, insights and expereiences intented to help people and companies forward. If you're interested in joining our community, as a resident or a host, a trainee or a visitor, pleae send us an email to yourock@becentral.org. We can't wait to meet you!</p>
+    <div class="main-content">
+        <section class="about_section">
+            <div class="title_1">
+                <h3 >01 About</h3>
             </div>
-        </div>
-    </section>
-    <section class="co_funders_section">
-        <div class="title">
-            <h3>02 Co-funders</h3>
-        </div>
-        <div class="paragraph">
-            <img class= "right" src="./images/le%20roi%20chez%20Cycorp.jpg" alt="photo becentral">
-            <div class="image_right">
-                <h2 class="title_paragraph">Our Co Founder & Ambassadors</h2>
-                <p>Late 2016, 28 passionate members of the Belgium's tech community got an idea: create a new digital campus that would be as accessible as possible.<br>
-                    They needed to find a place where Digital Transformation would be more approchable, a place where people could share, meet and connect.</p>
-                <button type="button">Discover them</button>
+            <div class="paragraph">
+                    <img class= "left" src="./images/becentral.jpg" alt="photo becentral">
+                <div class="image_left">
+                    <h2 class="title_paragraph">Ticket To Digital</h2>
+                    <div class="background_color">
+                        <p>BeCentral is a campus hosting 25+ digital initiatives above Brussels Central Station. Co-founded by 28 passionate entrepreneurs and helped by 13 ambassadors, the campus was created to help closing the digital skills gap and accelerate Belgium's digital transformation.</p>
+                        <p>Our campus welcome everyday 200+ permanent residents or visitors who are sharing and contribution to our mission.</p>
+                        <p>We organize training sessions, workshops, seminars, meetups, hackathons, bootcamps… Any form of exchange involving digital knowledge, expertise, insights and expereiences intented to help people and companies forward. If you're interested in joining our community, as a resident or a host, a trainee or a visitor, pleae send us an email to yourock@becentral.org. We can't wait to meet you!</p>
+                    </div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <section class="co_funders_section">
+            <div class="title_2">
+                <h3>02 Co-funders</h3>
+            </div>
+            <div class="paragraph">
+                <div class="image_background_color">
+                    <img class= "right" src="./images/le%20roi%20chez%20Cycorp.jpg" alt="photo becentral">
+                </div>
+                <div class="image_right">
+                    <h2 class="title_paragraph">Our Co Founder & Ambassadors</h2>
+                    <p>Late 2016, 28 passionate members of the Belgium's tech community got an idea: create a new digital campus that would be as accessible as possible.<br>
+                        They needed to find a place where Digital Transformation would be more approchable, a place where people could share, meet and connect.</p>
+                    <button type="button">Discover them</button>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
