--- a/public/about.html
+++ b/public/about.html
@@ -5,10 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
     <link rel="stylesheet" href="app.css">
-=======
->>>>>>> master
     <title>Be Centrale</title>
     <link rel="stylesheet" href="../assets/scss/layout/_about.scss">
 </head>
@@ -21,7 +18,7 @@
             <div class="paragraph">
                     <img class= "left" src="./images/becentral.jpg" alt="photo becentral">
                 <div class="image_left">
-                    <h2 class="title_paragraph">Ticket To Digital</h2>
+                    <h2 class="title_paragraph_1">Ticket To Digital</h2>
                     <div class="background_color">
                         <p>BeCentral is a campus hosting 25+ digital initiatives above Brussels Central Station. Co-founded by 28 passionate entrepreneurs and helped by 13 ambassadors, the campus was created to help closing the digital skills gap and accelerate Belgium's digital transformation.</p>
                         <p>Our campus welcome everyday 200+ permanent residents or visitors who are sharing and contribution to our mission.</p>
@@ -39,17 +36,17 @@
                     <img class= "right" src="./images/le%20roi%20chez%20Cycorp.jpg" alt="photo becentral">
                 </div>
                 <div class="image_right">
-                    <h2 class="title_paragraph">Our Co Founder & Ambassadors</h2>
+                    <h2 class="title_paragraph_2">Our Co Founder & Ambassadors</h2>
                     <p>Late 2016, 28 passionate members of the Belgium's tech community got an idea: create a new digital campus that would be as accessible as possible.<br>
                         They needed to find a place where Digital Transformation would be more approchable, a place where people could share, meet and connect.</p>
-                    <button type="button">Discover them</button>
+                    <div class="btn btn-a">
+                        <p>Discover them</p>
+                        <div class="line"></div>
+                    </div>
                 </div>
             </div>
         </section>
     </div>
-<<<<<<< HEAD
-=======
     <script src="app.js"></script>
->>>>>>> master
 </body>
 </html>
