--- a/public/about.html
+++ b/public/about.html
@@ -39,10 +39,9 @@
                     <h2 class="title_paragraph_2">Our Co Founder & Ambassadors</h2>
                     <p>Late 2016, 28 passionate members of the Belgium's tech community got an idea: create a new digital campus that would be as accessible as possible.<br>
                         They needed to find a place where Digital Transformation would be more approchable, a place where people could share, meet and connect.</p>
-                    <div class="btn btn-a">
-                        <p>Discover them</p>
-                        <div class="line"></div>
-                    </div>
+                    <form action="">
+                        <input type="button" class="discover_co_founder" value="Discover them">
+                    </form>
                 </div>
             </div>
         </section>
