Dernier commit avant media queries

--- a/public/about.html
+++ b/public/about.html
@@ -16,9 +16,9 @@
                 <h3 >01 About</h3>
             </div>
             <div class="paragraph">
-                    <img class= "left" src="./images/becentral.jpg" alt="photo becentral">
+                <h2 class="title_paragraph_1">Ticket To Digital</h2>
+                <img class= "left" src="./images/becentral.jpg" alt="photo becentral">
                 <div class="image_left">
-                    <h2 class="title_paragraph_1">Ticket To Digital</h2>
                     <div class="background_color">
                         <p>BeCentral is a campus hosting 25+ digital initiatives above Brussels Central Station. Co-founded by 28 passionate entrepreneurs and helped by 13 ambassadors, the campus was created to help closing the digital skills gap and accelerate Belgium's digital transformation.</p>
                         <p>Our campus welcome everyday 200+ permanent residents or visitors who are sharing and contribution to our mission.</p>
@@ -31,17 +31,22 @@
             <div class="title_2">
                 <h3>02 Co-funders</h3>
             </div>
-            <div class="paragraph">
-                <div class="image_background_color">
-                    <img class= "right" src="./images/le%20roi%20chez%20Cycorp.jpg" alt="photo becentral">
-                </div>
+            <div class="paragraph_2">
                 <div class="image_right">
                     <h2 class="title_paragraph_2">Our Co Founder & Ambassadors</h2>
                     <p>Late 2016, 28 passionate members of the Belgium's tech community got an idea: create a new digital campus that would be as accessible as possible.<br>
                         They needed to find a place where Digital Transformation would be more approchable, a place where people could share, meet and connect.</p>
-                    <form action="">
-                        <input type="button" class="discover_co_founder" value="Discover them">
-                    </form>
+                    <!--<form action="">
+                        <div class="contour_button">
+                            <input type="button" class="discover_co_founder" value="Discover them">
+                        </div>
+                    </form>-->
+                    <div class="button">
+                        <a href="" class="btn">Discover them</a>
+                    </div>
+                </div>
+                <div class="image_background_color">
+                    <img class= "right" src="./images/le%20roi%20chez%20Cycorp.jpg" alt="photo becentral">
                 </div>
             </div>
         </section>
