--- a/public/header.html
+++ b/public/header.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>becentral</title>
-    <link rel="stylesheet" href="./app.css">
 </head>
 <body>
 <div class='nav'>
@@ -25,5 +24,7 @@
         <button type="button" name="button">Keep in touch</button>
     </div>
 </div>
+<script src="app.js"></script>
+
 </body>
 </html>
