--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,340 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="app.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="   ">
     <title>Document</title>
 </head>
+
 <body>
-<h1>Test</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur fugit, nam provident quae vero. Aliquam, amet aut deleniti, expedita facere id ipsum nisi numquam optio porro recusandae, temporibus voluptas.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur fugit, nam provident quae vero. Aliquam, amet aut deleniti, expedita facere id ipsum nisi numquam optio porro recusandae, temporibus voluptas.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur fugit, nam provident quae vero. Aliquam, amet aut deleniti, expedita facere id ipsum nisi numquam optio porro recusandae, temporibus voluptas.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur fugit, nam provident quae vero. Aliquam, amet aut deleniti, expedita facere id ipsum nisi numquam optio porro recusandae, temporibus voluptas.</p>
+    <header>
+        <nav class='nav'>
+            <img src="images/becentralLogo_2.png" class="logo-becentrale" alt="logo_BeCentral" width="25px" height="30px">
+            <ul>
+                <li>About</li>
+                <li>Co-funders</li>
+                <li>Comunity</li>
+                <li>Join-Us</li>
+                <li>Spaces</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+
+    </header>
+    <div class="landing-img">
+        <div class="ticket">
+            <div class="logo">
+                <img src="../images/becentralLogo.png" alt="Logo-Becentrale" class "img-logo">
+            </div>
+            <div class="title">
+                <h1> Your ticket to digital</h1>
+                <h1> A great place to work </h1>
+                <h1> in the heart of Brussels</h1>
+            </div>
+            <div class="btn btn-a">
+                <p>Keep in touch</p>
+                <div class="line"></div>
+            </div>
+        </div>
+    </div>
+    <!about>
+
+    <section class="about">
+        <div class="container">
+            <div class="img-presentation">
+                <img src="images/Networking.jpg" alt="" class="img_about">
+            </div>
+            <div class="line"></div>
+            <h3 class="subtitle">Ticket to digital</h3>
+            <div class="about-text">
+                <p>BeCentral is a campus hosting 25+ digital initiatives above Brussels Central Station. Co-founded by 28 passionate
+                    entrepreneurs and helped by 13 ambassadors, the campus was created to help closing the digital skills
+                    gap and accelerate Belgium's digital transformation. Our campus welcome everyday 200+ permanent residents
+                    or visitors who are sharing and contribution to our mission.</p>
+            </div>
+            <div class="bottom-text">
+                <p>We organize training sessions, workshops, seminars, meetups, hackathons, bootcamps… Any form of exchange
+                    involving digital knowledge, expertise, insights and expereiences intented to help people and companies
+                    forward. If you're interested in joining our community, as a resident or a host, a trainee or a visitor,
+                    pleae send us an email to yourock@becentral.org. We can't wait to meet you!</p>
+            </div>
+        </div>
+    </section>
+
+    {# community #}
+    <div class="community">
+        <div class="section_title">
+            <img src="images/becentralLogo.png" alt="">
+            <img src="images/Line.png" alt="">
+            <h1>03 Community</h1>
+        </div>
+        <div class="subTitle mobile">
+            <hr class="line">
+            <h2>Community</h2>
+        </div>
+        <div class="container">
+            <div class="bg"></div>
+            <div class="img_container">
+                <img src="images/marius-ciocirlan-398931.png" alt="">
+            </div>
+            <div class="paragraphe">
+                <div class="subTitle">
+                    <hr class="line">
+                    <h2>Community</h2>
+                </div>
+                <p>
+                    workspace for independent contractors, small businesses, non-profits, and creative professionals looking for a place to build,
+                    create, develop, and collaborate. Located on Cherokee Street, Nebula opened in 2010 as the first coworking
+                    space in St. Louis, providing
+                </p>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    {# join-us #}
+
+    <div class="join_us">
+        <div class="section_title">
+            <img src="images/becentralLogo.png" alt="">
+            <img src="images/Line.png" alt="">
+            <h1>04 Join Us</h1>
+        </div>
+        <div class="subTitle">
+            <hr class="line">
+            <h2>Join Be Central</h2>
+        </div>
+        <div class="container">
+            <div class="bg"></div>
+            <div class="item">
+                <img src="./images/wifi.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3 class="b-title">Wifi </h3>
+                    <p>
+                        Powerful wifi sed ut perspiciatis unde omnis iste natus error sit.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./images/room.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3 class="b-title">Rooms</h3>
+                    <p>
+                        Rooms for everyone ut perspiciatis sit voluptatem accusantium doloremque.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./images/placeholder.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3 class="b-title">Location </h3>
+                    <p>
+                        Brusells centrum audantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi a
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./images/spaces.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3 class="b-title">Spaces </h3>
+                    <p>
+                        Co working space ed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./images/coffee-cup.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3 class="b-title">Drink</h3>
+                    <p>
+                        Unlimited coffee rchitecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem .
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./images/24h.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3 class="b-title">Hours </h3>
+                    <p>
+                        Open 24 / 7 voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    {#space#}
+    <section class="space">
+        <div class="container">
+            <div class="thumbnail">
+                <p class="space-txt">Book an available room</p>
+            </div>
+            <div class="thumbnail"></div>
+            <div class="thumbnail">
+                <img src="" alt="">
+            </div>
+            <div class="thumbnail">
+                <img src="" alt="">
+            </div>
+            <div class="thumbnail">
+                <img src="" alt="">
+            </div>
+            <div class="thumbnail">
+                <img src="" alt="">
+            </div>
+            <div class="thumbnail">
+                <img src="" alt="">
+            </div>
+        </div>
+
+    </section>
+
+    {# agenda #}
+    <div class="bg-lock">
+
+    </div>
+    <section class="event">
+        <div class="section-title">
+            <div class="line"></div>
+            <h3 class="subtitle">Last Events</h3>
+        </div>
+        <div class="container">
+            <div class="card">
+                <div class="event-img">
+                    <img src="" alt="">
+                    <div class="state">
+                        <div class="white-line"></div>
+                        <p>Hosted</p>
+                    </div>
+                </div>
+                <div class="event-describe">
+                    <h5>2 FEB - Code Dojo</h5>
+                    <p class="event-title">Block-chain for dummies</p>
+                    <p class="event-sub">Lorem ipsum dolor sit amet, consectetur smot</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="event-img">
+                    <img src="" alt="">
+                    <div class="state">
+                        <div class="white-line"></div>
+                        <p>Hosted</p>
+                    </div>
+                </div>
+                <div class="event-describe">
+                    <h5>2 FEB - Code Dojo</h5>
+                    <p class="event-title">Block-chain for dummies</p>
+                    <p class="event-sub">Lorem ipsum dolor sit amet, consectetur smot</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="event-img">
+                    <img src="" alt="">
+                    <div class="state">
+                        <div class="white-line"></div>
+                        <p>Hosted</p>
+                    </div>
+                </div>
+                <div class="event-describe">
+                    <h5>2 FEB - Code Dojo</h5>
+                    <p class="event-title">Block-chain for dummies</p>
+                    <p class="event-sub">Lorem ipsum dolor sit amet, consectetur smot</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="event-img">
+                    <img src="" alt="">
+                    <div class="state">
+                        <div class="white-line"></div>
+                        <p>Hosted</p>
+                    </div>
+                </div>
+                <div class="event-describe">
+                    <h5>2 FEB - Code Dojo</h5>
+                    <p class="event-title">Block-chain for dummies</p>
+                    <p class="event-sub">Lorem ipsum dolor sit amet, consectetur smot</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="event-img">
+                    <img src="" alt="">
+                    <div class="state">
+                        <div class="white-line"></div>
+                        <p>Hosted</p>
+                    </div>
+                </div>
+                <div class="event-describe">
+                    <h5>2 FEB - Code Dojo</h5>
+                    <p class="event-title">Block-chain for dummies</p>
+                    <p class="event-sub">Lorem ipsum dolor sit amet, consectetur smot</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="event-img">
+                    <img src="" alt="">
+                    <div class="state">
+                        <div class="white-line"></div>
+                        <p>Hosted</p>
+                    </div>
+                </div>
+                <div class="event-describe">
+                    <h5>2 FEB - Code Dojo</h5>
+                    <p class="event-title">Block-chain for dummies</p>
+                    <p class="event-sub">Lorem ipsum dolor sit amet, consectetur smot</p>
+                </div>
+            </div>
+
+        </div>
+        </div>
+    </section>
+
+    <section class="contact">
+        <div class="container">
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.2252826718923!2d4.355283915745745!3d50.845512379531854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47fd1e382f7%3A0xaf07bf72d3c7f131!2sBecentral!5e0!3m2!1sen!2sbe!4v1517930508318" width="1145" height="650" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="formulaire">
+            <p class="set-title">Becentral</p>
+            <p class="adress">Cantersteen 10, 1000 Brussels</p>
+            <p class="info">yourock@becentral.org
+                    Looking for information about the Bitcoin ATM? 
+                    email info@orillia.be or call +32 9 366 52 47</p>
+            <form action="contact.php" method="post">
+                <input type="text" placeholder="Full name">
+                <input type="mail" placeholder="Email">
+                <input type="number" placeholder="Phone number">
+             
+
+            </form>
+        </div>
+    </section>
+    <footer>
+        <div class='content'>
+            <ul>
+                <li>
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                </li>
+                <li>
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                </li>
+                <li>
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                </li>
+                <li>
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </li>
+            </ul>
+            <div class='copyright'>
+                © Becentral - 2018
+            </div>
+        </div>
+    </footer>
+    <script src="app.js"></script>
 </body>
-<script src="app.js"></script>
 
 </html>
