--- a/public/community_page.html
+++ b/public/community_page.html
@@ -6,6 +6,7 @@
   <title>Community</title>
 </head>
 <body>
+  <div class="community_page">
   <div class='container'>
     <div class="left">
       <div class="back">
@@ -50,6 +51,7 @@
       <!-- <div><img src="" alt=""></div>
       <div><img src="" alt=""></div> -->
     </div>
+  </div>
   </div>
   <script src="app.js"></script>
 </body>
