--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,179 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Test</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur fugit, nam provident quae vero.
-    Aliquam, amet aut deleniti, expedita facere id ipsum nisi numquam optio porro recusandae, temporibus voluptas.</p>
-<p>Lorem ipsum dolor sit, consectetur adipisicing elit. Architecto consequatur fugit, nam provident quae vero.
-    Aliquam, amet aut deleniti, expedita facere id ipsum nisi numquam optio porro recusandae, temporibus voluptas.</p>
 
-<p>Voir</p>
+<div class="about section">
+    <div class="section_title">
+        <img src="images/becentralLogo.png" alt="">
+        <img src="images/Line.png" alt="">
+        <h1>01 about</h1>
+    </div>
+    <div class="container">
+        <div class="subContainer">
+            <div class="bg"></div>
+            <div class="subTitle mobile">
+                <hr class="line">
+                <h2>Ticket To Digital</h2>
+            </div>
+            <div class="img_container">
+                <img src="images/about.png" alt="">
+            </div>
+            <div class="paragraphe">
+                <div class="subTitle desktop">
+                    <hr class="line">
+                    <h2>Ticket To Digital</h2>
+                </div>
+                <p class="reg-paragraphe">BeCentral is a vibrant Digital Campus located on top of Brussels Central
+                    Station.</p>
+                <br>
+                <p class="reg-paragraphe">Co-founded by a group of passionate entrepreneurs, our mission of closing the
+                    digital skills gap and
+                    accelerate Belgium’s digital transformation came to life in October 2017.</p>
+                <p class="reg-paragraphe">Our awesome community of 25+ digital initiatives – or 200+ residents on campus
+                    every day –
+                    contribute to our mission by exchanging their insights and experiences.</p>
+                <p class="reg-paragraphe">
+                    Since October, we welcomed 100+ events to bring digital closer to people (meetups, inspirational or
+                    educational talks) or to companies (trainings, workshops, seminars, bootcamps).We’re on a mission to
+                    bring digital close to you. So, are you ready to jump onboard?
+                </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="co-founders section">
+    <div class="section_title">
+        <img src="images/becentralLogo.png" alt="">
+        <img src="images/Line.png" alt="">
+        <h1>02 Co-founders</h1>
+    </div>
+    <div class="container">
+        <div class="paragraphe">
+            <div class="subTitle">
+                <hr class="line">
+                <h2>Our Co-Founder & Amabassadors</h2>
+            </div>
+            <div class="img_container mobile">
+                <div class="bg"></div>
+                <div class="img_container">
+                    <img src="images/learning.png" alt=""/>
+                </div>
+            </div>
+            <p class="reg-paragraphe">
+                Late 2016, 28 passionate members of the Belgium's tech community got an idea: create a new digital
+                campus that would be as accessible as possible.
+                They needed to find a place where Digital Transformation would be more approchable, a place where people
+                could share, meet and connect. </p>
+        </div>
+        <div class="img_container desktop">
+            <div class="bg"></div>
+            <img src="images/learning.png" alt=""/>
+        </div>
+    </div>
+</div>
+
+<div class="community section">
+    <div class="section_title">
+        <img src="images/becentralLogo.png" alt="">
+        <img src="images/Line.png" alt="">
+        <h1>03 Community</h1>
+    </div>
+    <div class="subTitle mobile">
+        <hr class="line">
+        <h2>Community</h2>
+    </div>
+    <div class="container">
+        <div class="bg"></div>
+        <div class="img_container">
+            <img src="images/marius-ciocirlan-398931.png" alt="">
+        </div>
+        <div class="paragraphe">
+            <div class="subTitle desktop">
+                <hr class="line">
+                <h2>Community</h2>
+            </div>
+            <p class="reg-paragraphe">
+                workspace for independent contractors, small businesses, non-profits, and creative professionals looking
+                for a place to build, create, develop, and collaborate.
+                Located on Cherokee Street, Nebula opened in 2010 as the first coworking space in St. Louis, providing
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="join_us section">
+    <div class="section_title">
+        <img src="images/becentralLogo.png" alt="">
+        <img src="images/Line.png" alt="">
+        <h1>04 Join Us</h1>
+    </div>
+    <div class="subTitle">
+        <hr class="line">
+        <h2>Join Be Central</h2>
+    </div>
+    <div class="container">
+        <div class="bg"></div>
+        <div class="item">
+            <img src="./images/wifi.png" class="join_us_icons" alt="">
+            <div class="item-text">
+                <h3>Wifi </h3>
+                <p>
+                    Powerful wifi sed ut perspiciatis unde omnis iste natus error sit.
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/room.png" class="join_us_icons" alt="">
+            <div class="item-text">
+                <h3>Rooms</h3>
+                <p>
+                    Rooms for everyone ut perspiciatis sit voluptatem accusantium doloremque.
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/placeholder.png" class="join_us_icons" alt="">
+            <div class="item-text">
+                <h3>Location </h3>
+                <p>
+                    Brusells centrum audantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                    a
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/spaces.png" class="join_us_icons" alt="">
+            <div class="item-text">
+                <h3>Spaces </h3>
+                <p>
+                    Co working space ed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                    doloremque
+
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/coffee-cup.png" class="join_us_icons" alt="">
+            <div class="item-text">
+                <h3>Drink</h3>
+                <p>
+                    Unlimited coffee rchitecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem .
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/24h.png" class="join_us_icons" alt="">
+            <div class="item-text">
+                <h3>Hours </h3>
+                <p>
+                    Open 24 / 7 voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <script src="app.js"></script>
 </html>
