--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,8 @@
 
 <div class="about section">
     <div class="section_title">
-        <img src="images/becentralLogo.png" alt="">
-        <img src="images/Line.png" alt="">
-        <h1>01 about</h1>
+        <img src="images/bseclogo.png" alt="">
+        <h1>01 About</h1>
     </div>
     <div class="container">
         <div class="subContainer">
@@ -52,8 +51,7 @@
 
 <div class="co-founders section">
     <div class="section_title">
-        <img src="images/becentralLogo.png" alt="">
-        <img src="images/Line.png" alt="">
+        <img src="images/bseclogo.png" alt="">
         <h1>02 Co-founders</h1>
     </div>
     <div class="container">
@@ -83,8 +81,7 @@
 
 <div class="community section">
     <div class="section_title">
-        <img src="images/becentralLogo.png" alt="">
-        <img src="images/Line.png" alt="">
+        <img src="images/bseclogo.png" alt="">
         <h1>03 Community</h1>
     </div>
     <div class="subTitle mobile">
@@ -112,8 +109,7 @@
 
 <div class="join_us section">
     <div class="section_title">
-        <img src="images/becentralLogo.png" alt="">
-        <img src="images/Line.png" alt="">
+        <img src="images/bseclogo.png" alt="">
         <h1>04 Join Us</h1>
     </div>
     <div class="subTitle">
@@ -121,62 +117,65 @@
         <h2>Join Be Central</h2>
     </div>
     <div class="container">
-        <div class="bg"></div>
-        <div class="item">
-            <img src="./images/wifi.png" class="join_us_icons" alt="">
-            <div class="item-text">
-                <h3>Wifi </h3>
-                <p>
-                    Powerful wifi sed ut perspiciatis unde omnis iste natus error sit.
-                </p>
+        <div class="subContainer">
+            <div class="bg"></div>
+            <div class="item">
+                <img src="./images/wifi.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3>Wifi </h3>
+                    <p>
+                        Powerful wifi sed ut perspiciatis unde omnis iste natus error sit.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="item">
-            <img src="./images/room.png" class="join_us_icons" alt="">
-            <div class="item-text">
-                <h3>Rooms</h3>
-                <p>
-                    Rooms for everyone ut perspiciatis sit voluptatem accusantium doloremque.
-                </p>
+            <div class="item">
+                <img src="./images/room.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3>Rooms</h3>
+                    <p>
+                        Rooms for everyone ut perspiciatis sit voluptatem accusantium doloremque.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="item">
-            <img src="./images/placeholder.png" class="join_us_icons" alt="">
-            <div class="item-text">
-                <h3>Location </h3>
-                <p>
-                    Brusells centrum audantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                    a
-                </p>
+            <div class="item">
+                <img src="./images/placeholder.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3>Location </h3>
+                    <p>
+                        Brusells centrum audantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+                        quasi
+                        a
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="item">
-            <img src="./images/spaces.png" class="join_us_icons" alt="">
-            <div class="item-text">
-                <h3>Spaces </h3>
-                <p>
-                    Co working space ed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                    doloremque
+            <div class="item">
+                <img src="./images/spaces.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3>Spaces </h3>
+                    <p>
+                        Co working space ed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                        doloremque
 
-                </p>
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="item">
-            <img src="./images/coffee-cup.png" class="join_us_icons" alt="">
-            <div class="item-text">
-                <h3>Drink</h3>
-                <p>
-                    Unlimited coffee rchitecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem .
-                </p>
+            <div class="item">
+                <img src="./images/coffee-cup.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3>Drink</h3>
+                    <p>
+                        Unlimited coffee rchitecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem .
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="item">
-            <img src="./images/24h.png" class="join_us_icons" alt="">
-            <div class="item-text">
-                <h3>Hours </h3>
-                <p>
-                    Open 24 / 7 voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
-                </p>
+            <div class="item">
+                <img src="./images/24h.png" class="join_us_icons" alt="">
+                <div class="item-text">
+                    <h3>Hours </h3>
+                    <p>
+                        Open 24 / 7 voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+                    </p>
+                </div>
             </div>
         </div>
     </div>
