--- a/public/cofunders.html
+++ b/public/cofunders.html
@@ -10,7 +10,7 @@
   <div class="cofunders_page">
     <div class="container">
       <header>
-        <div class="title">
+        <div class="titles">
           <hr class="line" />
           <h2>Our Co-funders</h2>
         </div>
@@ -356,32 +356,13 @@
               <p>Robin<br>Wauters</p>
             </div>
           </div>
-          <div class="img-block-1">
-            <div class="img">
-              <div class="more">
-
-              </div>
-            </div>
-            <div class="texti">
-
-            </div>
-          </div>
-          <div class="img-block-1">
-            <div class="img">
-              <div class="more">
-              </div>
-            </div>
-            <div class="texti">
-
-            </div>
-          </div>
 
       </section>
       </div>
 
 
       <section>
-        <div class="title">
+        <div class="titles">
           <hr class="line" />
           <h2>Ambassadors</h2>
         </div>
@@ -530,24 +511,6 @@
             </div>
             <div class="text">
               <p>Luc<br>Wynant</p>
-            </div>
-          </div>
-          <div class="img-block">
-            <div class="img">
-              <div class="more">
-              </div>
-            </div>
-            <div class="texti">
-
-            </div>
-          </div>
-          <div class="img-block">
-            <div class="img">
-              <div class="more">
-              </div>
-            </div>
-            <div class="texti">
-
             </div>
           </div>
         </div>
