--- a/public/community_page.html
+++ b/public/community_page.html
@@ -18,9 +18,7 @@
           </div>
         <div class="bg"></div>
         <div class="text">
-          <p>BeCentral welcomes every day an awesome community of 200+ residents, ready to learn and share about digital initiatives.
-            The 25+ digital initiatives include coding schools, cybersecurity program, NGO’s and startups. Are you looking for a physical
-            desk/office in a digital community? Discover your community here and get in touch for a tour!<p>
+          <p>Our campus welcomes every day 30+ initiatives (200+ tech enthusiasts) – including educational programs, startups and NGO’s – working together to reduce the digital skills gap in a vibrant entrepreneurial setup.<p>
         </div>
         <a href="" class="btn"></a>
       </div>
