--- a/public/cofunders.html
+++ b/public/cofunders.html
@@ -17,9 +17,8 @@
         <div class="bg">
         </div>
         <div class="description">
-          <p>Late 2016, a group of passionate entrepreneurs had a brilliant idea: create a place where digital could become accessible to everyone. hey needed to find a place to make their dream come true, a place where people could meet, share and learn.
-            They wanted a central place. And guess what? They found the absolute must: Brussels Central Station. With more than 700.000 travellers passing through the station every week, the location was ideal to develop their mission. Our cofous brought
-            BeCentral to life. Nothing would have bene possible without them and we are incredibly proud to have them on board!</p>
+          <p>Late 2016, a group of passionate entrepreneurs had an idea: create a central hub where digital could become accessible to everyone. And guess what? They found the absolute must: Brussels Central Station. With more than 60.000 travellers passing
+            through the station every day, the location was ideal to develop their mission. Nothing would have been possible without them!</p>
         </div>
       </header>
       <section>
@@ -40,7 +39,7 @@
             <div class="img">
               <img src="images/co-funders/Karen-Boers.jpg" alt="Karen_Boers">
               <div class="more">
-              <a href="https://www.linkedin.com/in/karenboers/">+</a>
+                <a href="https://www.linkedin.com/in/karenboers/">+</a>
               </div>
             </div>
             <div class="text">
@@ -52,7 +51,7 @@
             <div class="img">
               <img src="images/co-funders/Chris-Burggraeve.jpg" alt="Chris_Burggraeve">
               <div class="more">
-              <a href="https://www.linkedin.com/in/chrisburggraeve/">+</a>
+                <a href="https://www.linkedin.com/in/chrisburggraeve/">+</a>
               </div>
             </div>
             <div class="text">
@@ -170,7 +169,7 @@
             <div class="img">
               <img src="images/co-funders/Thierry-Geerts.jpg" alt="Thierry-Geert">
               <div class="more">
-              <a href="https://www.linkedin.com/in/thierrygeerts/">+</a>
+                <a href="https://www.linkedin.com/in/thierrygeerts/">+</a>
               </div>
             </div>
             <div class="text">
