--- a/public/index.html
+++ b/public/index.html
@@ -12,18 +12,21 @@
 </head>
 <body>
 <nav class="main-nav">
-    <img src="images/becentralLogoVert.png" alt="" class="logo">
-    <ul>
-        <li>About</li>
-        <li>Co-founders</li>
-        <li>Community</li>
-        <li>Join us</li>
-        <li>Spaces</li>
-        <li>Event</li>
-        <li>Contact</li>
-        <li id="news">NewsLetter</li>
-    </ul>
+    <div class="container">
+        <img src="images/becentralLogoVert.png" alt="" class="logo">
+        <ul>
+            <li>About</li>
+            <li>Co-founders</li>
+            <li>Community</li>
+            <li>Join us</li>
+            <li>Spaces</li>
+            <li>Event</li>
+            <li>Contact</li>
+            <li id="news">NewsLetter</li>
+        </ul>
+    </div>
 </nav>
+
 <header class="headerVideo">
     <video autoplay loop>
         <source src="./images/708213662.mp4" id="bgVideo">
