commit animation page cofunders join us ...

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,67 @@
     <title>Document</title>
 </head>
 <body>
+ <div id="openMenu">
+         <img src="images/hamburger.png" alt="">
+     </div>
+     <div id="closeMenu">
+         <img src="images/close.png" alt="">
+     </div>
+     <div id="main">
+ 
+         <div id="logoSection">
+             <div class="innerlogo">
+                 <img src="images/BECENTRAL-logo-2.png" alt="" >
+             </div>
+         </div>
+         <div id="menuSection">
+             <ul>
+                 <li>
+                     <div class="menu">
+                        
+                         <a href="#about"> <p class="menuTitle">TICKET TO DIGITAL</p></a>
+ 
+                     </div>
+                 </li>
+                 <li>
+                     <div class="menu">
+                             <a href="#about"> <p class="menuTitle">CO FOUNDERS</p></a>
+ 
+                     </div>
+                 </li>
+                 <li>
+                     <div class="menu">
+                             <a href="community_page.html"> <p class="menuTitle">COMMUNITY</p></a>
+ 
+                     </div>
+                 </li>
+                 <li>
+                     <div class="menu">
+                             <a href="#about"> <p class="menuTitle">JOIN-US</p></a>
+ 
+                     </div>
+                 </li>
+                 <li>
+                     <div class="menu">
+                             <a href="rooms.html"> <p class="menuTitle">SPACES</p></a>
+ 
+                     </div>
+                 </li>
+                 <li>
+                     <div class="menu">
+                             <a href="#about"> <p class="menuTitle">EVENTS</p></a>
+ 
+                     </div>
+                 </li>
+                 <li>
+                     <div class="menu">
+                             <a href="#about"> <p class="menuTitle">CONTACT</p></a>
+ 
+                     </div>
+                 </li>
+             </ul>
+         </div>
+     </div>  
 <nav class="main-nav">
     <div class="container">
         <img src="images/becentralLogoVert.png" alt="" class="logo">
@@ -104,7 +165,7 @@
         </div>
     </div>
     <div class="button">
-            <a href="co-funders.html" class="animated-button">Discover Them</a>
+            <a href="cofunders.html" class="animated-button">Discover Them</a>
         </div>
 </div>
 
@@ -341,8 +402,6 @@
         </div>
     </div>
 </div>
-
-
 <div class="contact section">
     <div class="section_title">
         <img src="images/bseclogo.png" alt="">
