--- a/public/rooms.html
+++ b/public/rooms.html
@@ -18,13 +18,15 @@
                         <h2>Our Spaces</h2>
                     </div>
                     <div class="paragraphe">
-                        We organize training sessions, workshops, seminars, meetups, hackathons, bootcamps… Any form of
-                        exchange involving digital knowledge, expertise, insights and expereiences intented to help
-                        people and companies forward.
+                        <div class="float">
+                            We organize training sessions, workshops, seminars, meetups, hackathons, bootcamps… Any form of
+                            exchange involving digital knowledge, expertise, insights and expereiences intented to help
+                            people and companies forward.
+                        </div>
                     </div>
-                    <div class="btn">
-                        <span>Book a room</span>
-                    </div>
+                    <div class="button">
+                        <a href="#" class="animated-button">BOOK A ROOM</a>
+                        </div>
                 </div>
                 <div class="specs">
                     <div class="content">
@@ -49,14 +51,18 @@
                     <li id="studioc" class="room_link">Studio C</li>
                     <li id="studior" class="room_link">Studio R</li>
                 </ul>
+                <div class="green_overlay"></div>
                 <div class="img_container_room">
                     <img id="image" src="images/room1.jpeg" alt="">
                 </div>
+                
                 <div class="room_box">
+                    <div class="grey_overlay"></div>
                     <div class="name">
                         The Boardroom
                     </div>
                 </div>
+            
             </div>
         </div>
     </div>
