--- a/public/community.html
+++ b/public/community.html
@@ -1,42 +1,53 @@
-<!doctype html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Community</title>
 </head>
 <body>
-<div class="community">
-    <div class="section_title">
-        <img src="images/becentralLogo.png" alt="">
-        <img src="images/Line.png" alt="">
-        <h1>03 Community</h1>
-    </div>
-    <div class="subTitle mobile">
-        <hr class="line">
-        <h2>Community</h2>
-    </div>
-    <div class="container">
+  <div class="community_page">
+  <div class='container'>
+    <div class="left">
+      <div class="back">
+      </div>
+      <div class="content">
+          <div class="titles">
+            <hr class="line"/>
+            <h2>Community</h2>
+          </div>
         <div class="bg"></div>
-        <div class="img_container">
-            <img src="images/marius-ciocirlan-398931.png" alt="">
+        <div class="text">
+          <p>BeCentral welcomes every day an awesome community of 200+ residents, ready to learn and share about digital initiatives.
+            The 25+ digital initiatives include coding schools, cybersecurity program, NGO’s and startups. Are you looking for a physical
+            desk/office in a digital community? Discover your community here and get in touch for a tour!<p>
         </div>
-        <div class="paragraphe">
-            <div class="subTitle">
-                <hr class="line">
-                <h2>Community</h2>
-            </div>
-            <p>
-                workspace for independent contractors, small businesses, non-profits, and creative professionals looking
-                for a place to build, create, develop, and collaborate.
-                Located on Cherokee Street, Nebula opened in 2010 as the first coworking space in St. Louis, providing
-            </p>
-        </div>
+        <!-- <a href="" class="btn">Join Us</a> -->
+      </div>
     </div>
-</div>
-</div>
-<script src="app.js"></script>
+    <div class="right">
+      <div class="img-ctn"><a href="http://alliedforstartups.org/"><img src="images/logos/Allied.png" alt="allied_for_stratups_logo"></a></div>
+      <div class="img-ctn"><a href="http://becode.org"><img src="images/logos/becode.png" alt="becode_logo"></a></div>
+      <div class="img-ctn"><a href="http://bestarter.org"><img src="images/logos/bestarter.png" alt="bestarter_logo"></a></div>
+      <div class="img-ctn"><a href="https://www.citizenlab.co/"><img src="images/logos/citizenlab.png" alt="citizenlab_logo"></a></div>
+      <div class="img-ctn"><a href=""><img src="images/logos/challenger.png" alt="challenger88"></a></div>
+      <div class="img-ctn"><a href="http://civiclabs.be/"><img src="images/logos/civic_lab.png" alt="civic_lab_logo"></a></div>
+      <div class="img-ctn"><a href="https://www.codefever.be/"><img src="images/logos/codefever.png" alt="codefever_logo"></a></div>
+      <div class="img-ctn"><a href="https://www.codenplay.be/"><img src="images/logos/CodeNplay.png" alt="codeNplay_logo"></a></div>
+      <div class="img-ctn"><a href="https://www.dalberg.com/"><img src="images/logos/ddi.png" alt="ddi_logo"></a></div>
+      <div class="img-ctn"><a href="http://digi-bridge.org/"><img src="images/logos/digi-bridge.png" alt="digi-bridge_logo"></a></div>
+      <div class="img-ctn"><a href="https://faqbot.co/"><img src="images/logos/Faqbot.png" alt="Faqbot_logo"></a></div>
+      <div class="img-ctn"><a href="https://www.globalshapers.org"><img src="images/logos/global_F.png" alt="Global_logo"></a></div>
+      <div class="img-ctn"><a href="https://mediawijs.be/"><img src="images/logos/mediawijs.png" alt="mediawijs_logo"></a></div>
+      <div class="img-ctn"><a href="https://nextmoov.be/"><img src="images/logos/nextmoov.png" alt="nextmoov_logo"></a></div>
+      <div class="img-ctn"><a href="https://okfn.org/"><img src="images/logos/open_knowleg.png" alt="open_knowlege_logo"></a></div>
+      <div class="img-ctn"><a href="https://startups.be"><img src="images/logos/startups.png" alt="startups_logo"></a></div>
+      <div class="img-ctn"><a href="https://www.lewagon.com/fr/brussels"><img src="images/logos/wagon.png" alt="wagon_logo"></a></div>
+      <!-- <div><img src="" alt=""></div>
+      <div><img src="" alt=""></div> -->
+    </div>
+  </div>
+  </div>
+  <script src="app.js"></script>
 </body>
 </html>
