one page + external page

--- a/public/rooms.html
+++ b/public/rooms.html
@@ -8,7 +8,65 @@
     <title>Document</title>
 </head>
 <body>
-
+<div class="rooms">
+    <div>
+        <div class="container">
+            <div class="left">
+                <div class="description">
+                    <div class="subTitle">
+                        <hr class="line">
+                        <h2>Our Spaces</h2>
+                    </div>
+                    <div class="paragraphe">
+                        <div class="float">
+                            We organize training sessions, workshops, seminars, meetups, hackathons, bootcamps… Any form of
+                            exchange involving digital knowledge, expertise, insights and expereiences intented to help
+                            people and companies forward.
+                        </div>
+                    </div>
+                    <div class="button">
+                        <a href="#" class="animated-button">BOOK A ROOM</a>
+                        </div>
+                </div>
+                <div class="specs">
+                    <div class="content">
+                        <ul class="names">
+                            <li> Capacity</li>
+                            <li> People</li>
+                            <li> Material</li>
+                        </ul>
+                        <ul class="values">
+                            <li id="capacity">110m²</li>
+                            <li id="people">U-Shape : 25 p | Classroom : 30 p | Theater : 75 p</li>
+                            <li id="material">Micro | Beamer | Audio | Screen</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="shaddow"></div>
+                <ul class="rooms_list">
+                    <li id="board" class="room_link">The Boardroom</li>
+                    <li id="foyer" class="room_link">The foyer</li>
+                    <li id="studioc" class="room_link">Studio C</li>
+                    <li id="studior" class="room_link">Studio R</li>
+                </ul>
+                <div class="green_overlay"></div>
+                <div class="img_container_room">
+                    <img id="image" src="images/room1.jpeg" alt="">
+                </div>
+                
+                <div class="room_box">
+                    <div class="grey_overlay"></div>
+                    <div class="name">
+                        The Boardroom
+                    </div>
+                </div>
+            
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <script src="app.js"></script>
 </html>
