--- a/public/index.html
+++ b/public/index.html
@@ -155,14 +155,12 @@
                 become accessible to everyone. And guess what? They found the absolute must: Brussels Central Station.
                 With more than 60.000 travellers passing through the station every day, the location was ideal to
                 develop their mission. Nothing would have been possible without them!</p>
+            <a href="cofunders.html" class="animated-button">Discover Them</a>
         </div>
         <div class="img_container desktop">
             <div class="bg"></div>
             <img src="images/cofunders.jpg" alt=""/>
         </div>
-    </div>
-    <div class="button">
-        <a href="cofunders.html" class="animated-button">Discover Them</a>
     </div>
 </div>
 
@@ -191,10 +189,8 @@
                 Our campus welcomes every day 30+ initiatives (200+ tech enthusiasts) – including educational programs,
                 startups and NGO’s – working together to reduce the digital skills gap in a vibrant entrepreneurial
                 setup. </p>
+            <a href="community.html" class="animated-button">Our community</a>
         </div>
-    </div>
-    <div class="button">
-        <a href="community.html" class="animated-button">Our community</a>
     </div>
 </div>
 
@@ -217,6 +213,7 @@
                     Book a tour to discover the campus here!
 
                 </p>
+                <a href="#" class="animated-button">Join us</a>
             </div>
             <div id="items-list">
                 <div class="bg"></div>
@@ -264,9 +261,6 @@
                 </div>
             </div>
         </div>
-        <div class="button">
-            <a href="#" class="animated-button">Join us</a>
-        </div>
     </div>
 </div>
 
@@ -281,9 +275,9 @@
             <div id="room-gallery">
                 <div class="bg"></div>
                 <div class="item desc"><a href="rooms.html">Book An <br>Available <br>Room</a></div>
-                <div class="item"><img src="./images/openspace.jpg" alt=""></div>
-                <div class="item"><img src="./images/boardroom.jpg" alt=""></div>
-                <div class="item"><img src="./images/studioC.jpg" alt=""></div>
+                <div class="item one"></div>
+                <div class="item two"></div>
+                <div class="item three"></div>
             </div>
             <div class="paragraphe">
                 <div class="subTitle  ">
@@ -296,12 +290,11 @@
                     trainings, workshops, meetings or even fancy award ceremonies!
                     Fill in the questionnaire to check availability & rates. We can’t wait to connect with you.
                 </p>
+                <a href="rooms.html" class="animated-button">Book a room</a>
             </div>
         </div>
     </div>
-    <div class="button">
-        <a href="rooms.html" class="animated-button">Book a room</a>
-    </div>
+
 </div>
 
 <div class="event section">
