--- a/public/index.html
+++ b/public/index.html
@@ -417,12 +417,30 @@
                     As our entry doors are kept closed for security reasons, it is best to call the person you are
                     visiting. Make sure to have his or her telephone number at hand.
                     In case you don’t have it, you can call +32 488 45 42 62.
-                </p>
+                </p> <br>
                 <p>
                     <span class="green-txt">in case you arrive by train</span>
-                    Go to the main hall of the Brussels Central Station, take the stairs next to/to the left hand side
-                    of the Starbucks café.
+                    <ul>
+                      <li>Go to the main hall of the Brussels Central Station, take the stairs next to/to the left hand side
+                    of the Starbucks café.</li>
+                    <li>Leave the station to arrive on rue Cantersteen.</li>
+                    <li>Stay on this side of the road.</li>
+                    <li>Go to the left.</li>
+                    <li>You’ll find us at number 10.</li>
+                  </ul>
+                </p> <br>
+                <p>
+                  <span class="green-txt">in case you arrive by car</span>
+                  Put in Cantersteen 10 or 12 in your GPS system. Nearest parking spaces are <a href="http://www.interparking.be/fr-BE/find-parking/Albertine-Square/">Interparking Albertine-Square</a> or <a href="http://prod.interparking.be/en/find-parking/Grand%20Place/">Interparking Grand Place.</a>
+                </p> <br>
+                <p>
+                  <span class="green-txt">BeCentral Reception</span>
+                  You can find us on the 2nd floor which is accessible via the elevator or the stairs on the right hand side of the elevator. The stairs in front of the entrance door go up to the 1st floor only. Once you are on the 2nd floor, follow the sign ‘The Factory/ BeCentral team’.
+                  See you soon.
                 </p>
+
+
+
             </div>
             <div id="map"></div>
         </div>
