--- a/public/community.html
+++ b/public/community.html
@@ -27,6 +27,7 @@
     </div>
     <div class="right">
       <div class="img-ctn"><a href="http://alliedforstartups.org/"><img src="images/logos/Allied.png" alt="allied_for_stratups_logo"></a></div>
+      <div class="img-ctn"><a href=""><img src="images/logos/balance.png" alt="balance_logo"></a></div>
       <div class="img-ctn"><a href="http://becode.org"><img src="images/logos/becode.png" alt="becode_logo"></a></div>
       <div class="img-ctn"><a href="http://bestarter.org"><img src="images/logos/bestarter.png" alt="bestarter_logo"></a></div>
       <div class="img-ctn"><a href="https://www.citizenlab.co/"><img src="images/logos/citizenlab.png" alt="citizenlab_logo"></a></div>
@@ -36,9 +37,12 @@
       <div class="img-ctn"><a href="https://www.codenplay.be/"><img src="images/logos/CodeNplay.png" alt="codeNplay_logo"></a></div>
       <div class="img-ctn"><a href="https://www.dalberg.com/"><img src="images/logos/ddi.png" alt="ddi_logo"></a></div>
       <div class="img-ctn"><a href="http://digi-bridge.org/"><img src="images/logos/digi-bridge.png" alt="digi-bridge_logo"></a></div>
+      <div class="img-ctn"><a href="https://www.esn.eu/home/"><img src="images/logos/esn.png" alt="Esn_logo"></a></div>
       <div class="img-ctn"><a href="https://faqbot.co/"><img src="images/logos/Faqbot.png" alt="Faqbot_logo"></a></div>
       <div class="img-ctn"><a href="https://www.globalshapers.org"><img src="images/logos/global_F.png" alt="Global_logo"></a></div>
+      <div class="img-ctn"><a href="http://www.hackyourfuture.be/"><img src="images/logos/hack.png" alt="hackyourfuture"></a></div>
       <div class="img-ctn"><a href="https://mediawijs.be/"><img src="images/logos/mediawijs.png" alt="mediawijs_logo"></a></div>
+      <div class="img-ctn"><a href=""><img src="images/logos/neurone.png" alt="nextmoov_logo"></a></div>
       <div class="img-ctn"><a href="https://nextmoov.be/"><img src="images/logos/nextmoov.png" alt="nextmoov_logo"></a></div>
       <div class="img-ctn"><a href="https://okfn.org/"><img src="images/logos/open_knowleg.png" alt="open_knowlege_logo"></a></div>
       <div class="img-ctn"><a href="https://startups.be"><img src="images/logos/startups.png" alt="startups_logo"></a></div>
