udpdate before pull

--- a/public/index.html
+++ b/public/index.html
@@ -420,25 +420,31 @@
                 </p> <br>
                 <p>
                     <span class="green-txt">in case you arrive by train</span>
-                    <ul>
-                      <li>Go to the main hall of the Brussels Central Station, take the stairs next to/to the left hand side
-                    of the Starbucks café.</li>
+                <ul>
+                    <li>Go to the main hall of the Brussels Central Station, take the stairs next to/to the left hand
+                        side
+                        of the Starbucks café.
+                    </li>
                     <li>Leave the station to arrive on rue Cantersteen.</li>
                     <li>Stay on this side of the road.</li>
                     <li>Go to the left.</li>
                     <li>You’ll find us at number 10.</li>
-                  </ul>
+                </ul>
                 </p> <br>
                 <p>
-                  <span class="green-txt">in case you arrive by car</span>
-                  Put in Cantersteen 10 or 12 in your GPS system. Nearest parking spaces are <a href="http://www.interparking.be/fr-BE/find-parking/Albertine-Square/">Interparking Albertine-Square</a> or <a href="http://prod.interparking.be/en/find-parking/Grand%20Place/">Interparking Grand Place.</a>
+                    <span class="green-txt">in case you arrive by car</span>
+                    Put in Cantersteen 10 or 12 in your GPS system. Nearest parking spaces are <a
+                        href="http://www.interparking.be/fr-BE/find-parking/Albertine-Square/">Interparking
+                    Albertine-Square</a> or <a href="http://prod.interparking.be/en/find-parking/Grand%20Place/">Interparking
+                    Grand Place.</a>
                 </p> <br>
                 <p>
-                  <span class="green-txt">BeCentral Reception</span>
-                  You can find us on the 2nd floor which is accessible via the elevator or the stairs on the right hand side of the elevator. The stairs in front of the entrance door go up to the 1st floor only. Once you are on the 2nd floor, follow the sign ‘The Factory/ BeCentral team’.
-                  See you soon.
+                    <span class="green-txt">BeCentral Reception</span>
+                    You can find us on the 2nd floor which is accessible via the elevator or the stairs on the right
+                    hand side of the elevator. The stairs in front of the entrance door go up to the 1st floor only.
+                    Once you are on the 2nd floor, follow the sign ‘The Factory/ BeCentral team’.
+                    See you soon.
                 </p>
-
 
 
             </div>
@@ -446,6 +452,10 @@
         </div>
     </div>
 </div>
+<div id="dialog" title="Basic dialog">
+    <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+</div>
+
 </body>
 <script>
     function initMap() {
@@ -640,6 +650,6 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1J-2g_6PXGZzdyRGLqXayPGg3ZdYjKXg&callback=initMap">
 
 </script>
-
 <script src="app.js"></script>
+<script></script>
 </html>
