--- a/public/index.html
+++ b/public/index.html
@@ -274,7 +274,7 @@
         <div class="subContainer">
             <div id="room-gallery">
                 <div class="bg"></div>
-                <div class="item desc"><a href="rooms.html">Book An <br>Available <br>Room</a></div>
+                <div class="item desc"><a href="rooms.html">Discover <br>our <br>Rooms</a></div>
                 <div class="item one"></div>
                 <div class="item two"></div>
                 <div class="item three"></div>
@@ -438,12 +438,11 @@
                   You can find us on the 2nd floor which is accessible via the elevator or the stairs on the right hand side of the elevator. The stairs in front of the entrance door go up to the 1st floor only. Once you are on the 2nd floor, follow the sign ‘The Factory/ BeCentral team’.
                   See you soon.
                 </p>
-
-
-
             </div>
             <div id="map"></div>
         </div>
+        <!-- footer -->
+
     </div>
 </div>
 </body>
