--- a/public/index.html
+++ b/public/index.html
@@ -87,10 +87,10 @@
 
 <header class="headerVideo">
     <video autoplay loop>
-        <source src="./images/708213662.mp4" id="bgVideo">
+        <source src="images/becentral.mp4" id="bgVideo">
     </video>
     <div class="content ticket">
-        <img src="./images/becentralLogo.png" alt="" class="logoBe">
+        <img src="images/becentralLogo.png" alt="" class="logoBe">
         <h1>Digital Campus <br>
             Brussels Central Station</h1>
     </div>
