--- a/public/footer.html
+++ b/public/footer.html
@@ -6,15 +6,19 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
+  <footer>
+    <div class="content">
 <ul>
-    <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
-    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-    <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+    <li> <a href="https://www.linkedin.com/company/be-central-brussels/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+    <li> <a href="https://www.facebook.com/becentral/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+    <li> <a href="https://twitter.com/becentralbxl"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+    <li> <a href="https://www.instagram.com/becentral/?hl=fr"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 </ul>
 <div class='copyright'>
-    Becentral
+    © Becentral - 2018
 </div>
+</div>
+</footer>
 </body>
 <script src="app.js"></script>
 </html>
