--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    </head>
     <title>Document</title>
 </head>
 <body>
@@ -142,7 +144,7 @@
         <div class="paragraphe">
             <div class="subTitle">
                 <hr class="line">
-                <h2>Our Co-Founder & Amabassadors</h2>
+                <h2>Co-Founder & Amabassadors</h2>
             </div>
             <div class="img_container mobile">
                 <div class="bg"></div>
@@ -209,11 +211,11 @@
             <div class="paragraphe">
                 <p class="reg-paragraphe">
                     Are you looking for a physical desk or office in a digital community?
-                    We have what you’re looking for: the most central place in town, surrounded by a unique community
+                    We have what you’re looking for: the most central place in town, surrounded by a unique community.
                     Book a tour to discover the campus here!
 
                 </p>
-                <a href="#" class="animated-button">Join us</a>
+                <a href="mailto:yourock@becentral.org" class="animated-button">Join us</a>
             </div>
             <div id="items-list">
                 <div class="bg"></div>
@@ -290,7 +292,7 @@
                     trainings, workshops, meetings or even fancy award ceremonies!
                     Fill in the questionnaire to check availability & rates. We can’t wait to connect with you.
                 </p>
-                <a href="rooms.html" class="animated-button">Book a room</a>
+                <a href="rooms.html" class="animated-button">Gallery</a>
             </div>
         </div>
     </div>
@@ -409,7 +411,7 @@
                 <h1>BeCentral</h1><br>
                 <p class="head">
                     <span> Cantersteen 10, 1000 Brussels</span><br>
-                    <span class="regular-p">yourock@becentral.org</span>
+                    <span class="regular-p"><a href="mailto:yourock@becentral.org">yourock@becentral.org</span></a>
                 </p>
                 <p>
                     <span class="bold">You can find us in the heart of Brussels, on top of the Central Station.</span><span
@@ -441,10 +443,24 @@
             </div>
             <div id="map"></div>
         </div>
-        <!-- footer -->
+
 
     </div>
 </div>
+<!-- footer -->
+<footer>
+  <div class="content">
+<ul>
+  <li> <a href="https://www.linkedin.com/company/be-central-brussels/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+  <li> <a href="https://www.facebook.com/becentral/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+  <li> <a href="https://twitter.com/becentralbxl"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+  <li> <a href="https://www.instagram.com/becentral/?hl=fr"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+</ul>
+<div class='copyright'>
+  © Becentral - 2018
+</div>
+</div>
+</footer>
 </body>
 <script>
     function initMap() {
